# FlaskSite

./: .dockerignore  Procfile  README.md  __init__.py  fly.toml  forms.py  main.py  models.py  pyproject.toml  requirements.txt  vercel.json
FlaskSite/: __init__.py  books.db  forms.py  main.py  models.py  views.py
FlaskSite/templates/: about.html  base.html  index.html
FlaskSite/templates/authors/: authorBio.html  authors.html
FlaskSite/templates/errors/: 500.html
FlaskSite/templates/products/: details.html  productdetails_base.html  products.html  single.html
FlaskSite/views/: __init__.py
api/: books.sqlite  main.py  models.py
api/templates/: about.html  base.html  search.html
api/templates/authors/: authorBio.html  authors.html
api/templates/errors/: 404.html
migrations/versions/: b6167b021cea_initial_migration.py
portfolio/templates/: index.html
templates/: base.html
