[project]
name = "flasksite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-bootstrap>=3.3.7.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-script>=2.0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pycparser>=2.23",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-editor>=1.0.4",
    "requests>=2.32.5",
    "six>=1.17.0",
    "sqlalchemy>=2.0.45",
    "urllib3>=2.6.2",
    "visitor>=0.1.3",
    "werkzeug>=3.1.4",
    "wtforms>=3.2.1",
]
